--- a/src/main/resources/templates/visualizza-clubs.html
+++ b/src/main/resources/templates/visualizza-clubs.html
@@ -6,16 +6,23 @@
 </head>
 <body>
     <table>
-        <tr th:each="club : ${club}">
+        <tr>
             <td>Nome club</td>
             <td>Descrizione</td>
             <td>Esperto</td>
         </tr>
-        <tr th:each="club : ${club}">
+        <tr th:each="club : ${listaClubs}">
             <td th:text="${club.nome}"></td>
             <td th:text="${club.descrizione}"></td>
+            <td th:text="${club.generi}"></td>
             <td th:text="${club.esperto.nome}"></td>
         </tr>
     </table>
+
+    <form method="post" action="/club-del-libro/crea" >
+        <p> Nome <input type="input" name="nome"> </p>
+        <p> Descrizione <input type="input" name="descrizione"> </p>
+        <p><input type="submit"></p>
+    </form>
 </body>
 </html>
