--- a/src/main/resources/templates/visualizza-clubs.html
+++ b/src/main/resources/templates/visualizza-clubs.html
@@ -14,15 +14,16 @@
         <tr th:each="club : ${listaClubs}">
             <td th:text="${club.nome}"></td>
             <td th:text="${club.descrizione}"></td>
-            <td th:text="${club.generi}"></td>
+            <td> <img th:src="@{'data:image/png;base64,'+ ${club.immagineCopertina}}" /></td>
             <td th:text="${club.esperto.nome}"></td>
         </tr>
     </table>
 
-    <form method="post" action="/club-del-libro/crea" >
+    <form method="post" action="/club-del-libro/crea" enctype="multipart/form-data">
         <p> Nome <input type="input" name="nome"> </p>
         <p> Descrizione <input type="input" name="descrizione"> </p>
-        <p><input type="submit"></p>
+        <p> <input type="file" name="copertina" accept="image/png, image/jpeg"></p>
+        <p> <input type="submit"></p>
     </form>
 </body>
 </html>
