--- a/src/main/resources/templates/visualizza-clubs.html
+++ b/src/main/resources/templates/visualizza-clubs.html
@@ -9,11 +9,14 @@
         <tr>
             <td>Nome club</td>
             <td>Descrizione</td>
+            <td>Generi</td>
+            <td>Copertina</td>
             <td>Esperto</td>
         </tr>
         <tr th:each="club : ${listaClubs}">
             <td th:text="${club.nome}"></td>
             <td th:text="${club.descrizione}"></td>
+            <td th:each="genere : ${club.generi}" th:text="${genere.nome}"></td>
             <td> <img th:src="@{'data:image/png;base64,'+ ${club.immagineCopertina}}" /></td>
             <td th:text="${club.esperto.nome}"></td>
         </tr>
@@ -22,6 +25,8 @@
     <form method="post" action="/club-del-libro/crea" enctype="multipart/form-data">
         <p> Nome <input type="input" name="nome"> </p>
         <p> Descrizione <input type="input" name="descrizione"> </p>
+        <p> Genere <input type="input" name="generi"> </p>
+        <p> Genere <input type="input" name="generi"> </p>
         <p> <input type="file" name="copertina" accept="image/png, image/jpeg"></p>
         <p> <input type="submit"></p>
     </form>
