--- a/src/main/resources/templates/registrazione_lettore.html
+++ b/src/main/resources/templates/registrazione_lettore.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <form method="post" action="/registrazione/lettore" >
-    <p> Email <input type="input" name="email"> </p>
-    <p> Nome <input type="input" name="nome"> </p>
-    <p> Cognome <input type="input" name="cognome"> </p>
-    <p> Username <input type="input" name="username"> </p>
-    <p> Password <input type="password" name="password"> </p>
-    <p> Conferma Password <input type="password"> </p>
-    <p> Provincia <input type="input" name="provicia"> </p>
-    <p> Cittá <input type="input" name="citta"> </p>
-    <p> Via <input type="input" name="via"> </p>
-    <p> Recapito Telefonico <input type="tel" name="recapito_telefonico"> </p>
+    <p> Email <input type="input" name="email" required> </p>
+    <p> Nome <input type="input" name="nome" required> </p>
+    <p> Cognome <input type="input" name="cognome" required> </p>
+    <p> Username <input type="input" name="username" required> </p>
+    <p> Password <input type="password" name="password" required> </p>
+    <p> Conferma Password <input type="password" name="conferma_password" required> </p>
+    <p> Provincia <input type="input" name="provicia" required> </p>
+    <p> Cittá <input type="input" name="citta" required> </p>
+    <p> Via <input type="input" name="via" required> </p>
+    <p> Recapito Telefonico <input type="tel" name="recapito_telefonico" required> </p>
     <p> <input type="submit"></p>
 </form>
 </body>
