--- a/src/main/resources/templates/autenticazione.html
+++ b/src/main/resources/templates/autenticazione.html
@@ -5,9 +5,13 @@
     <title>Autenticazione</title>
 </head>
 <body>
-    <form method="post" action="">
-        <p> Email <input type="email" name="email"> </p>
-        <p> Password <input type="password" name="password"> </p>
+    <form method="post" action="/autenticazione/login">
+        <p> Email <input type="email" name="email" required> </p>
+        <p> Password <input type="password" name="password" required> </p>
+        <p> <input type="radio" name="tipo" value="Biblioteca">
+            <input type="radio" name="tipo" value="Lettore" checked>
+            <input type="radio" name="tipo" value="Esperto">
+        </p>
         <p> <input type="submit"> </p>
     </form>
 </body>
