--- a/src/main/resources/templates/autenticazione.html
+++ b/src/main/resources/templates/autenticazione.html
@@ -9,8 +9,11 @@
         <p> Email <input type="email" name="email" required> </p>
         <p> Password <input type="password" name="password" required> </p>
         <p> <input type="radio" name="tipo" value="Biblioteca">
+            <label>Biblioteca</label>
             <input type="radio" name="tipo" value="Lettore" checked>
+            <label>Lettore</label>
             <input type="radio" name="tipo" value="Esperto">
+            <label>Esperto</label>
         </p>
         <p> <input type="submit"> </p>
     </form>
