--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it" xmlns:th="http://www.thymeleaf.org/%22%3E">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
-    <p></p>
+
 </body>
 </html>
