--- a/src/main/resources/templates/autenticazione.html
+++ b/src/main/resources/templates/autenticazione.html
@@ -5,7 +5,7 @@
     <title>Autenticazione</title>
 </head>
 <body>
-    <form method="post" action="/autenticazione/index">
+    <form method="post" action="/autenticazione/login">
         <p> Email <input type="email" name="email" required> </p>
         <p> Password <input type="password" name="password" required> </p>
         <p> <input type="submit"> </p>
