--- a/src/main/resources/templates/registrazione.html
+++ b/src/main/resources/templates/registrazione.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="/registrazione/scegli">
+    <form action="/registrazione/scegli" method="post">
         <input type="submit" value="Lettore" name="scelta">
         <input type="submit" value="Esperto" name="scelta">
         <input type="submit" value="Biblioteca" name="scelta">
