Registrazione Biblioteca e testing funzionanti
Co-Authored-By: Antonio  <57596737+atdepo@users.noreply.github.com>

--- a/src/main/resources/templates/registrazione.html
+++ b/src/main/resources/templates/registrazione.html
@@ -5,12 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="/registrazione/scegli">
-        <input type="submit" value="Lettore" name="scelta">
-        <input type="submit" value="Esperto" name="scelta">
-        <input type="submit" value="Biblioteca" name="scelta">
+<form action="/registrazione/scegli" method="post">
+    <input type="submit" value="Lettore" name="scelta">
+    <input type="submit" value="Esperto" name="scelta">
+    <input type="submit" value="Biblioteca" name="scelta">
 
 
-    </form>
+</form>
 </body>
 </html>
