--- a/src/main/resources/templates/registrazione_esperto.html
+++ b/src/main/resources/templates/registrazione_esperto.html
@@ -17,8 +17,8 @@
             <p> Via <input type="input" name="via" required> </p>
             <p> Recapito Telefonico <input type="tel" name="recapitoTelefonico" required> </p>
             <p> Lavora in <input type="email" name="email_biblioteca" required> </p>
-            <p> Genere 1 <input type="input" name="genere" required> </p>
-            <p> Genere 2 <input type="input" name="genere" required> </p>
+            <p> Genere 1 <input type="input" name="genere"> </p>
+            <p> Genere 2 <input type="input" name="genere"> </p>
             <p> <input type="submit"></p>
         </form>
     </body>
