Inizio modifiche dei dati degli utenti
Registrazione biblioteca funzionante

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,6 @@
     <p th:text = "${loggedUser}"></p>
     <a href="/autenticazione/logout">Logout</a>
     <a href="/autenticazione/">Login</a>
+    <a href="/registrazione/modifica-dati">Modifica i dati inseriti</a>
 </body>
 </html>
