--- a/src/main/resources/templates/layout/common.html
+++ b/src/main/resources/templates/layout/common.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Titolo </title>
+    <title> BiblioNet </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link th:href="@{/style/style.css}" rel="stylesheet">
@@ -13,13 +13,9 @@
     </script>
 </head>
 
-<body class="pagina">
-    <div layout:insert="~{layout/includes/navbar :: navbar}"></div>
-    <div class="contenuto-pagina">
-        <div layout:fragment="page">
-            <p>Contenuto del body</p>
-        </div>
-    </div>
+
+<body layout:fragment="pagina">
+    Contenuto del Body.
 </body>
 
 </html>
