Funzionalità di aggiunta di un evento con un libro associato

--- a/src/main/resources/templates/aggiungi-evento.html
+++ b/src/main/resources/templates/aggiungi-evento.html
@@ -18,6 +18,9 @@
         <label for="descrizione">Descrizione</label>
         <textarea name="descrizione" th:field="*{descrizione}"></textarea>
         <p> <input type="submit"></p>
+        <br />
+        <label for="libro">ID Libro</label>
+        <input type="number" th:field="*{libro}" />
     </form>
 </body>
 </html>
