Testing di visulizzaLogin

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <body>
     <p th:text = "${loggedUser}"></p>
     <a href="/autenticazione/logout">Logout</a>
-    <a href="/autenticazione/">Login</a>
+    <a href="/autenticazione">Login</a>
 </body>
 </html>
