--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,7 +6,7 @@
      per permettere la sostituzione del contenuto della navbar. -->
     <div layout:insert="~{layout/includes/navbar :: navbar}"></div>
     <div class="contenuto-pagina">
-        <div layout:fragment="page">
+        <div layout:fragment="contenuto-pagina">
             <p>Contenuto della pagina</p>
         </div>
     </div>
