--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -1,6 +1,9 @@
 #navbar-principale {
-    height: 5em;
+    height: 4em;
     background-color: #073763;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    color: #ffffff;
 }
 
 .pagina {
@@ -17,4 +20,18 @@
     background-color: #b20909;
     color: #ffffff;
     border-radius: 0 !important;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
+a:link, a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:active, a:hover {
+    color: #f5f5f5;
+    text-decoration: none;
 }
