rimosso campo hidden dai form
La mail non può essere cambiata, perciò non ne ho più bisogno

Co-Authored-By: Alessio Casolaro <65906352+BearGrillz99@users.noreply.github.com>

--- a/src/main/resources/templates/modifica_dati_biblioteca.html
+++ b/src/main/resources/templates/modifica_dati_biblioteca.html
@@ -8,8 +8,7 @@
    <form method="post" action="conferma-modifica-biblioteca">
        <fieldset>
            <legend>Modifica Dati</legend>
-           <input type="hidden" name="current_email" th:value="${biblioteca.getEmail()}">
-        <p> Email <input type="email" name="email" th:value="${biblioteca.getEmail()}"> </p>
+        <p> Email <input type="email" name="email" th:value="${biblioteca.getEmail()}" readonly> </p>
         <p> Nome Biblioteca <input type="text" name="nomeBiblioteca" th:value="${biblioteca.getNomeBiblioteca()}"> </p>
         <p> Provincia <input type="text" name="provincia" th:value="${biblioteca.getProvincia()}"> </p>
         <p> Città <input type="text" name="citta" th:value="${biblioteca.getCitta()}"> </p>
