--- a/src/main/resources/templates/prenota-libro.html
+++ b/src/main/resources/templates/prenota-libro.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
 <head>
     <meta charset="UTF-8">
     <title>Prenota libro</title>
 </head>
 
 <body>
-    <h2>Biblioteche che hanno <span th:text="${libro.titolo}"></span>: </h2>
-    <table>
-        <tr th:each="biblioteca : ${lista}">
-            <td th:text="${biblioteca.nomeBiblioteca}"></td>
-            <td>
-                <form method="post" action="/prenotazione-libri/conferma-prenotazione">
-                    <input type="hidden" name="idBiblioteca" th:value="${biblioteca.email}">
-                    <input type="hidden" name="idLibro" th:value="${libro.idLibro}">
-                    <button type="submit">Prenota</button>
-                </form>
-            </td>
-        </tr>
-    </table>
+    <div layout:fragment="contenuto-pagina">
+        <div class="container-md" style="margin-top: 5%">
+            <div class="row">
+                <div class="col border">
 
+                </div>
+                <div class="col border">
+                    
+                </div>
+            </div>
+        </div>
 
+    </div>
 </body>
 </html>
