--- a/src/main/resources/templates/prenota-libro.html
+++ b/src/main/resources/templates/prenota-libro.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Prenota libro</title>
+    <link rel="stylesheet" th:href="@{~/style/prenotazione-libri.css}"></style>
 </head>
 
 <body>
@@ -12,24 +13,66 @@
             <div class="row">
                 <!-- Colonna che contiene la card per la visualizzazione del libro -->
                 <div class="col">
-                    <div class="card" style="width : 80%; border: none">
-                        <img class="card-img-top" th:src="@{~/images/logo.png}" alt="Copertina Libro" width="80%">
-                        <div class="card-body"  style="font-size: 1.5em">
-                            <h1 class="card-title text-center" th:text="${libro.titolo}"></h1>
-                            <p class="card-text" style="margin-top:2%" th:text="${libro.descrizione}"></p>
-                            <ul class="card-text" th:each="genere : ${libro.generi}" style="list-style-type: circle" >
-                                <li th:text="${genere.nome}"></li>
-                            </ul>
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width : 80%;">
+                        <img class="card-img-top border" th:src="@{~/image/logo/logo_BiblioNet.png}" alt="Copertina Libro" width="80%">
+                        <div class="card-body" style="font-size: 18px;">
+                            <h3 class="card-title text-center rounded shadow p-3 mb-5" th:text="${libro.titolo}" style="background-color:#073763; color:white; padding: 2%;"></h3>
+                            <div class="row card-content">
+                                <div class="col-4">
+                                    <p class="card-text bold-text">Descrizione</p>
+                                </div>
+                                <div class="col-6">
+                                    <p class="card-text" th:text="${libro.descrizione}"></p>
+                                </div>
+                            </div>
+                            <div class="row card-content">
+                                <div class="col-4">
+                                    <p class="card-text bold-text" >Autore</p>
+                                </div>
+                                <div class="col-6">
+                                    <p class="card-text" th:text="${libro.autore}"></p>
+                                </div>
+                            </div>
+                            <div class="row card-content">
+                                <div class="col-4">
+                                    <p class="card-text bold-text" >Casa Editrice</p>
+                                </div>
+                                <div class="col-6">
+                                    <p class="card-text" th:text="${libro.casaEditrice+', '+libro.annoDiPubblicazione.year}"></p>
+                                </div>
+                            </div>
+                            <div class="row card-content">
+                                <div class="col-4">
+                                    <p class="card-text bold-text" >Generi</p>
+                                </div>
+                                <div class="col-6">
+                                    <div class="row" th:each="genere : ${libro.generi}">
+                                        <div class="col" th:text="${genere.nome}"></div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
-                <!-- Colonna che contiene la card per la visualizzazione del libro -->
-                <div class="col jumbotron text-center">
-                    <h1>Effettua la prenotazione del libro</h1>
-                    <p>Scegli fra le biblioteche di seguito quella che preferisci</p>
-                    <ul style="list-style-type: none" th:each="biblioteca : ${lista}">
-                        <li>
-
+                <!-- Colonna che contiene la card per la scelta della biblioteca -->
+                <div class="col">
+                    <h1 class="text-center" style="border-bottom: 2px solid #b20909; padding-bottom: 5%; margin-top:5%;">Scegli la biblioteca che preferisci!</h1>
+                    <ul class="list-group-flush" style="list-style-type: none; border-bottom: 2px solid #b20909;" th:each="biblioteca : ${lista}">
+                        <li class="list-group-item" style="padding: 5%">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                    <h3 th:text="${biblioteca.nomeBiblioteca}"></h3>
+                                    <small class="text-muted"><th th:text="${biblioteca.citta}"></th></small>
+                                </div>
+                                <div>
+                                    <form method="post" action="/prenotazione-libri/conferma-prenotazione">
+                                        <input type="hidden" name="idBiblioteca" th:value="${biblioteca.email}">
+                                        <input type="hidden" name="idLibro" th:value="${libro.idLibro}">
+                                        <button class="btn btn-primary btn-lg" style="background-color: #073763" type="submit">Prenota</button>
+                                    </form>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </div>
