bug fix e inserimento test esperto
rimane da fare il test della scelta, ma non riesco a fare funzionare il mock del model

Co-Authored-By: Alessio Casolaro <65906352+BearGrillz99@users.noreply.github.com>

--- a/src/main/resources/templates/modifica_dati_esperto.html
+++ b/src/main/resources/templates/modifica_dati_esperto.html
@@ -13,10 +13,14 @@
         <p> Cognome <input type="input" name="cognome" th:value="${esperto.getCognome()}"> </p>
         <p> Username <input type="input" name="username" th:value="${esperto.getUsername()}"> </p>
         <p> Provincia <input type="input" name="provincia" th:value="${esperto.getProvincia()}"> </p>
-        <p> Cittá <input type="input" name="citta" th:value="${esperto.getCitta()}"> </p>
+        <p> Città <input type="input" name="citta" th:value="${esperto.getCitta()}"> </p>
         <p> Via <input type="input" name="via" th:value="${esperto.getVia()}"> </p>
         <p> Recapito Telefonico <input type="tel" name="recapitoTelefonico" th:value="${esperto.getRecapitoTelefonico()}"> </p>
         <p> Email Biblioteca <input type="email" name="email_biblioteca" th:value="${esperto.getBiblioteca.getEmail()}"> </p>
+
+        <!--<p th:each="genere : ${esperto.generi}">
+            <input type="text" th:value="${genere.nome}" name="generi" />
+        </p>-->
     </fieldset>
 
     <fieldset>
