--- a/src/main/resources/templates/registrazione_lettore.html
+++ b/src/main/resources/templates/registrazione_lettore.html
@@ -13,7 +13,7 @@
         <p> Password <input type="password" name="password" required> </p>
         <p> Conferma Password <input type="password" name="conferma_password" required> </p>
         <p> Provincia <input type="input" name="provincia" required> </p>
-        <p> Cittá <input type="input" name="citta" required> </p>
+        <p> Città <input type="input" name="citta" required> </p>
         <p> Via <input type="input" name="via" required> </p>
         <p> Recapito Telefonico <input type="tel" name="recapitoTelefonico" required> </p>
         <p> <input type="submit"></p>
