--- a/src/main/resources/templates/prenota-libro.html
+++ b/src/main/resources/templates/prenota-libro.html
@@ -14,7 +14,7 @@
                 <!-- Colonna che contiene la card per la visualizzazione del libro -->
                 <div class="col">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width : 80%;">
-                        <img class="card-img-top border" th:src="@{~/image/logo/logo_BiblioNet.png}" alt="Copertina Libro" width="80%">
+                        <img class="card-img-top border" th:src="@{'data:image/png;base64,'+ ${libro.immagineLibro}}" alt="Nessuna copertina trovata" width="70%">
                         <div class="card-body" style="font-size: 18px;">
                             <h3 class="card-title text-center rounded shadow p-3 mb-5" th:text="${libro.titolo}" style="background-color:#073763; color:white; padding: 2%;"></h3>
                             <div class="row card-content">
@@ -25,6 +25,16 @@
                                     <p class="card-text" th:text="${libro.descrizione}"></p>
                                 </div>
                             </div>
+                            <th th:if="${libro.isbn} != null">
+                                <div class="row card-content">
+                                    <div class="col-4">
+                                        <p class="card-text bold-text" >ISBN</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <p class="card-text" th:text="${libro.isbn}"></p>
+                                    </div>
+                                </div>
+                            </th>
                             <div class="row card-content">
                                 <div class="col-4">
                                     <p class="card-text bold-text" >Autore</p>
